option java_package = "com.cloudata.keyvalue";

message KvEntry {
	required uint64 store_id = 1;
	required KvAction action = 2;
	optional bytes key = 3;
	optional bytes value = 4;
	optional int64 increment_by = 5;
	
	optional bytes if_value = 10;
	optional bool if_not_exists = 11;
}

enum KvAction {
	SET = 1;
	DELETE = 2;
	INCREMENT = 3;
	APPEND = 4;
}